--- a/Caddyfile
+++ b/Caddyfile
@@ -1,7 +1,6 @@
 {
 	admin off
 	cache {
-		status 2xx
 		ttl 27h
 		mode bypass
 		default_cache_control public, max-age=86400
@@ -39,6 +38,12 @@ handle @anime_titles {
 		span {path}
 	}
 	reverse_proxy https://anidb.net {
+		@nocache {
+			status 3xx 4xx 5xx
+		}
+		handle_response @nocache {
+			header Cache-Control "no-store"
+		}
 		header_up Host {upstream_hostport}
 		header_up User-Agent "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Brave Chrome/92.0.4515.131 Safari/537.36"
 		header_up -X-Forwarded-For
@@ -66,6 +71,12 @@ handle @anidbhttp {
 	}
 
 	reverse_proxy http://api.anidb.net:9001 {
+		@nocache {
+			status 3xx 4xx 5xx
+		}
+		handle_response @nocache {
+			header Cache-Control "no-store"
+		}
 		header_up Host {upstream_hostport}
 		header_up -X-Forwarded-For
 		header_up -X-Forwarded-Host
@@ -92,6 +103,12 @@ handle @images {
 		span {path}
 	}
 	reverse_proxy https://cdn.anidb.net {
+		@nocache {
+			status 3xx 4xx 5xx
+		}
+		handle_response @nocache {
+			header Cache-Control "no-store"
+		}
 		header_up Host {upstream_hostport}
 		header_up User-Agent "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Brave Chrome/92.0.4515.131 Safari/537.36"
 		header_up -X-Forwarded-For
@@ -123,6 +140,12 @@ handle @search {
 
 	rewrite * /index.php?task=search&{query}
 	reverse_proxy https://anisearch.outrance.pl {
+		@nocache {
+			status 3xx 4xx 5xx
+		}
+		handle_response @nocache {
+			header Cache-Control "no-store"
+		}
 		header_up Host {upstream_hostport}
 		header_up -X-Forwarded-For
 		header_up -X-Forwarded-Host
