--- a/Caddyfile
+++ b/Caddyfile
@@ -38,11 +38,11 @@ handle @anime_titles {
 		span {path}
 	}
 	reverse_proxy https://anidb.net {
-		@nocache {
-			status 3xx 4xx 5xx
-		}
+		@nocache 			status 3xx 4xx 5xx
 		handle_response @nocache {
-			header Cache-Control "no-store"
+					header Cache-Control "no-store"
+		copy_response_headers exclude Cache-Control
+		copy_response
 		}
 		header_up Host {upstream_hostport}
 		header_up User-Agent "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Brave Chrome/92.0.4515.131 Safari/537.36"
@@ -71,7 +71,7 @@ handle @anidbhttp {
 	}
 
 	rate_limit {
-		zone static_example {
+		zone static {
 			match {
 				method GET
 			}
@@ -82,12 +82,13 @@ handle @anidbhttp {
 	}
 
 	reverse_proxy http://api.anidb.net:9001 {
-		@nocache {
-			status 3xx 4xx 5xx
-		}
+		@nocache 			status 3xx 4xx 5xx
 		handle_response @nocache {
-			header Cache-Control "no-store"
+					header Cache-Control "no-store"
+		copy_response_headers exclude Cache-Control
+		copy_response
 		}
+
 		header_up Host {upstream_hostport}
 		header_up -X-Forwarded-For
 		header_up -X-Forwarded-Host
