put a 5 second rate limit window

--- a/Caddyfile
+++ b/Caddyfile
@@ -76,16 +76,16 @@ handle @anidbhttp {
 		span {path}
 	}
 
-	rate_limit {
-		zone static {
-			match {
-				method GET
-			}
-			key    static
-			events 1
-			window 5s
-		}
-	}
+	# rate_limit {
+	# 	zone static {
+	# 		match {
+	# 			method GET
+	# 		}
+	# 		key    static
+	# 		events 1
+	# 		window 5s
+	# 	}
+	# }
 
 	reverse_proxy http://api.anidb.net:9001 {
 		@nocache 			status 3xx 4xx 5xx
