--- a/Caddyfile
+++ b/Caddyfile
@@ -20,6 +20,10 @@
 }
 
 :80
+log {
+	output stdout
+	format json
+}
 @tracingEnabled expression {env.OTEL_EXPORTER_OTLP_TRACES_ENDPOINT} != ""
 @compressible {
 	not path *.gz
@@ -52,6 +56,8 @@ handle @anime_titles {
 		header_down -Cross-Origin-Resource-Policy
 		header_down -Link
 	}
+	log_append upstream_host {rp.upstream.host}
+	log_append cache_status {http.response.header.Cache-Status}
 }
 
 @anidbhttp {
@@ -78,6 +84,8 @@ handle @anidbhttp {
 		header_down -Cross-Origin-Resource-Policy
 		header_down -Link
 	}
+	log_append upstream_host {rp.upstream.host}
+	log_append cache_status {http.response.header.Cache-Status}
 }
 
 @images {
@@ -105,6 +113,8 @@ handle @images {
 		header_down -Cross-Origin-Resource-Policy
 		header_down -Link
 	}
+	log_append upstream_host {rp.upstream.host}
+	log_append cache_status {http.response.header.Cache-Status}
 }
 
 @search {
@@ -135,6 +145,8 @@ handle @search {
 		header_down -Cross-Origin-Resource-Policy
 		header_down -Link
 	}
+	log_append upstream_host {rp.upstream.host}
+	log_append cache_status {http.response.header.Cache-Status}
 }
 
 respond / 204
