--- a/Caddyfile
+++ b/Caddyfile
@@ -7,6 +7,10 @@
 	cache {
 		ttl 27h
 		default_cache_control public, max-age=86400
+		timeout {
+          backend 30s
+          cache 5ms
+        }
 		key {
 			disable_scheme
 			disable_host
@@ -81,7 +85,7 @@ handle @anidbhttp {
 	cache
 	min_duration {
 		# prevent flooding of multiple upstream requests
-		duration 2s
+		duration 30s
 	}
 	error_body_status {
 		# though the value `<error code="500">` may occur especially for banned, the API spec only specifies there's an <error> tag and makes no guarantees on the value.
