--- a/Caddyfile
+++ b/Caddyfile
@@ -80,16 +80,16 @@ handle @anidbhttp {
 
 	cache {
 		timeout {
-			backend {$HTTPAPI_BACKEND_DURATION:3s}
+			backend {$HTTPAPI_BACKEND_TIMEOUT:300s}
 			cache 1s
 		}
 	}
 	min_duration {
 		# prevent flooding of multiple upstream requests
-		# duration is sourced from environment: HTTPAPI_BACKEND_DURATION (default 3s)
-		duration {$HTTPAPI_BACKEND_DURATION:3s}
-		# optional: jitter factor (fraction of duration) via MIN_DURATION_JITTER (default 0.01)
-		jitter_factor {$MIN_DURATION_JITTER:0.01}
+		# duration is sourced from environment: HTTPAPI_MIN_DURATION (default 3s)
+		duration {$HTTPAPI_MIN_DURATION:3s}
+		# optional: jitter factor (fraction of duration) via HTTPAPI_MIN_DURATION_JITTER (default 0.01)
+		jitter_factor {$HTTPAPI_MIN_DURATION_JITTER:0.01}
 	}
 	error_body_status {
 		# though the value `<error code="500">` may occur especially for banned, the API spec only specifies there's an <error> tag and makes no guarantees on the value.
@@ -130,7 +130,7 @@ handle @anidbhttpAnime {
 	}
 	cache {
 		timeout {
-			backend {$HTTPAPI_BACKEND_DURATION:3s}
+			backend {$HTTPAPI_BACKEND_TIMEOUT:300s}
 			cache 1s
 		}
 		key {
@@ -139,10 +139,10 @@ handle @anidbhttpAnime {
 	}
 	min_duration {
 		# prevent flooding of multiple upstream requests
-		# duration is sourced from environment: HTTPAPI_BACKEND_DURATION (default 3s)
-		duration {$HTTPAPI_BACKEND_DURATION:3s}
-		# optional: jitter factor (fraction of duration) via MIN_DURATION_JITTER (default 0.01)
-		jitter_factor {$MIN_DURATION_JITTER:0.01}
+		# duration is sourced from environment: HTTPAPI_MIN_DURATION (default 3s)
+		duration {$HTTPAPI_MIN_DURATION:3s}
+		# optional: jitter factor (fraction of duration) via HTTPAPI_MIN_DURATION_JITTER (default 0.01)
+		jitter_factor {$HTTPAPI_MIN_DURATION_JITTER:0.01}
 	}
 	error_body_status {
 		# though the value `<error code="500">` may occur especially for banned, the API spec only specifies there's an <error> tag and makes no guarantees on the value.
