--- a/Caddyfile
+++ b/Caddyfile
@@ -103,6 +103,8 @@ handle @anidbhttp {
 		# the API spec actually says it returns 200 status code regardless of errors.
 		status 200
 		# status 500
+		not_found_status 200
+		# not_found_status 404
 		max_bytes 256
 	}
 
