--- a/Caddyfile
+++ b/Caddyfile
@@ -92,8 +92,8 @@ handle @anidbhttp {
 	}
 	min_duration {
 		# prevent flooding of multiple upstream requests
-		# duration is sourced from environment: HTTPAPI_MIN_DURATION (default 3s)
-		duration {$HTTPAPI_MIN_DURATION:3s}
+		# duration is sourced from environment: HTTPAPI_MIN_DURATION (default 5s)
+		duration {$HTTPAPI_MIN_DURATION:5s}
 		# optional: jitter factor (fraction of duration) via HTTPAPI_MIN_DURATION_JITTER (default 0.01)
 		jitter_factor {$HTTPAPI_MIN_DURATION_JITTER:0.01}
 	}
@@ -108,7 +108,7 @@ handle @anidbhttp {
 		max_bytes 256
 	}
 
-	reverse_proxy http://api.anidb.net:9001 {
+	reverse_proxy {$HTTPAPI_BACKEND:http://api.anidb.net:9001} {
 		header_up Host {upstream_hostport}
 		header_up User-Agent "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Brave Chrome/92.0.4515.131 Safari/537.36"
 		header_up -X-Forwarded-For
@@ -147,8 +147,8 @@ handle @anidbhttpAnime {
 	}
 	min_duration {
 		# prevent flooding of multiple upstream requests
-		# duration is sourced from environment: HTTPAPI_MIN_DURATION (default 3s)
-		duration {$HTTPAPI_MIN_DURATION:3s}
+		# duration is sourced from environment: HTTPAPI_MIN_DURATION (default 5s)
+		duration {$HTTPAPI_MIN_DURATION:5s}
 		# optional: jitter factor (fraction of duration) via HTTPAPI_MIN_DURATION_JITTER (default 0.01)
 		jitter_factor {$HTTPAPI_MIN_DURATION_JITTER:0.01}
 	}
