--- a/Caddyfile
+++ b/Caddyfile
@@ -3,6 +3,7 @@
 	order min_duration before respond
 	order error_body_status before respond
 	order cache before min_duration
+	metrics
 	cache {
 		ttl 27h
 		default_cache_control public, max-age=86400
